* Fixed the "level up" string to represent the ability to allocate multiple stat points. Also note if Power points can be allocated.
* Refactored 'requires_hpmp_state' for Powers to check against both stats at once. See the attribute reference for syntax changes.

Game updates:

* Fixed an oversight that allowed easy farming of the Torture Chambers boss and loot chests.
* Made it so that potions and scrolls can not be stashed. This fixes an exploit where players could utilize a low level character to get these items for cheap.
* Added new attack and interact cursors.
* Added sound effect and cursors for indicating low health.

Translation updates:

* Belarusian (be) update (Zmicer Turok)
* Brazilian Portuguese (pt_BR) update (Vinicius Rech)
* Catalan (ca) update (Marc Tormo i Bochaca)
* German (de) update (Fyrenic)
* Spanish (es) update (Agustin Ferrario)
* French (fr) update (syl_)
* Scottish Gaelic (gd) update (GunChleoc)
* Japanese (ja) update (sujiniku)
* Portuguese (pt) update (Rui)
* Russian (ru) update (Andrey Kapitonov, Igor Paliychuk, nwtour)
* Ukranian (uk) update (Igor Paliychuk)
* Chinese (zh) update (dumaosen, neverwin)



Flare v1.09.01 (http://flarerpg.org/index.php/2018/12/12/flare-1-09-01/)

Engine fixes:

* Fixed assertion/crash when engaging in dialog.

Game updates:

* Fixed main weapon layer order when hero is facing east.

Translation updates:

* Ukranian (uk) update (Микола Франчук)



Flare v1.09 (http://flarerpg.org/index.php/2018/12/09/flare-1-09/)

Engine features:

* Redesigned mouse movement with better handling of non-melee attacks.
* New mouse movement options to swap the movement button and/or restrict the movement button to be movement-only.
* Loot tooltips can now be hidden when entities are near pieces of loot. The setting "hide_radius" has been added to engine/loot.txt to control this.
* Overhead markers are now displayed for entities that are obscured by tall tiles.