@@ -34,6 +34,7 @@ Engine fixes:
 * When using the sdl_hardware renderer on Windows, OpenGL will now be used instead of Direct3D. This fixes the loss of some textures when resizing the window.
 * Fixed the "level up" string to represent the ability to allocate multiple stat points. Also note if Power points can be allocated.
 * Refactored 'requires_hpmp_state' for Powers to check against both stats at once. See the attribute reference for syntax changes.
+* Greatly improved performance of loot tooltips.
 
 Game updates:
 
